Add dev container and Rye

--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,10 @@ ipython_config.py
 .pdm-python
 .pdm-build/
 
+# rye
+requirements-dev.lock
+requirements.lock
+
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
